# finsight-agent

./: .dockerignore  .env.example  CLAUDE.md  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  fly.toml  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml
docker/: prometheus.yml
docs/: PROGRESS.md
scripts/: ingest_pdf.py
src/finsight/agents/: __init__.py  financial.py  rag.py  research.py  risk.py
src/finsight/api/: app.py  main.py  routes.py  schemas.py
src/finsight/db/: models.py  session.py
src/finsight/db/migrations/: env.py
src/finsight/db/migrations/versions/: 20260525_0001_create_documents_tables.py
src/finsight/evals/: __init__.py  dataset.py  generator.py  metrics.py  runner.py
src/finsight/graph/: orchestrator.py  state.py
src/finsight/ingestion/: chunker.py  embedder.py  indexer.py
src/finsight/observability/: __init__.py  metrics.py  tracing.py
src/finsight/retrieval/: hyde.py  reranker.py  retriever.py
tests/: conftest.py
tests/integration/: test_hyde.py  test_ingestion_pipeline.py  test_reranker.py  test_retriever.py
tests/unit/: test_api.py  test_eval_dataset.py  test_financial.py  test_generator.py  test_metrics.py  test_metrics_observability.py  test_orchestrator.py  test_rag.py  test_research.py  test_risk.py  test_runner.py  test_settings.py  test_tracing.py
